# django-slick-reporting

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  runtests.py  setup.cfg
.github/workflows/: django.yml  release.yml
demo_proj/: Dockerfile  docker-compose.yaml  local.yml  manage.py  production.yml  requirements.txt
demo_proj/.envs/.local/: .django  .postgres
demo_proj/demo_app/: apps.py  forms.py  helpers.py  models.py  reports.py  tests.py  views.py
demo_proj/demo_app/migrations/: 0001_initial.py  0002_salestransaction_price_salestransaction_quantity.py  0003_product_category.py  0004_client_country_product_sku.py  0005_product_size.py  0006_productcategory_remove_product_category_and_more.py  0007_monthlysalessummary.py
demo_proj/demo_app/templatetags/: slick_reporting_demo_tags.py
demo_proj/demo_proj/: asgi.py  settings.py  urls.py  wsgi.py
demo_proj/requirements/: base.txt  local.txt  production.txt
demo_proj/templates/: base.html  dashboard.html  home.html  menu.html  widget_template_with_pre.html
demo_proj/templates/demo/: apex_report.html
demo_proj/templates/slick_reporting/: base.html  report_form.html  simple_report.html
docs/: conf.py  index.rst  installation.rst  requirements.txt
docs/source/: charts.rst  computation_field.rst  concept.rst  conf.py  crosstab_options.rst  customization.rst  exporting.rst  filter_form.rst  group_by_report.rst  howto.rst  index.rst  list_report_options.rst  recipes.rst  report_generator.rst  search_form.rst  the_view.rst  time_series_options.rst  tour.rst  tutorial.rst  view.rst  view_options.rst  view_response_structure.rst
docs/source/howto/: customize_frontend.rst  index.rst
docs/source/ref/: computation_field.rst  dynamic_model.rst  index.rst  settings.rst  view_options.rst
docs/source/report_view/: crosstab_options.rst  filter_form.rst  group_by_report.rst  index.rst  list_report_options.rst  time_series_options.rst  view_options.rst
docs/source/topics/: charts.rst  computation_field.rst  crosstab_options.rst  custom_chart_engine.rst  dynamic_model.rst  exporting.rst  filter_form.rst  group_by_report.rst  index.rst  integrating_slick_reporting.rst  list_report_options.rst  pivot_report.rst  structure.rst  time_series_options.rst  widgets.rst
reporting/: __init__.py  apps.py  crispy_layouts.py  decorators.py  form_factory.py  helpers.py  models.py  registry.py  views.py
reporting/templates/reporting/: simple_report.html  table.html
reporting/templatetags/: ra_report_tags.py
scripts/: extract_changelog.py
slick_reporting/: __init__.py  app_settings.py  apps.py  decorators.py  dynamic_model.py  fields.py  form_factory.py  form_fields.py  forms.py  generator.py  helpers.py  meta_data.py  printing.py  registry.py  views.py
slick_reporting/dashboards/: apps.py  models.py  registry.py  sites.py  views.py
slick_reporting/dashboards/base/: admin.py  app_settings.py  helpers.py
slick_reporting/dashboards/jazzmin_integration/: apps.py
slick_reporting/dashboards/templatetags/: reporting_tags.py
slick_reporting/static/slick_reporting/: erp_framework.datatable.js  erp_framework.js  erp_framework.report_loader.js  main.js  ra.chartsjs.js  ra.datatable.js  (+8 more)
slick_reporting/templatetags/: reporting_tags.py  slick_reporting_tags.py
tests/: models.py  report_generators.py  requirements.txt  settings.py  test_dynamic_model.py  test_generator.py  test_pivot_generator.py  test_settings.py  tests.py  urls.py  views.py
tests/templates/: base.html
(+37 files in other folders)
