[metadata]
license_file = LICENSE.md
name = django-slick-reporting
version = attr: slick_reporting.__version__
author = Ra Systems
author_email = ramez@rasystems.io
description = A one-stop report and analytics generation and computation with batteries included
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://django-slick-reporting.com/
project_urls =
    Travis CI = https://travis-ci.org/ra-systems/django-slick-reporting/
    Documentation = https://django-slick-reporting.readthedocs.io/en/latest/
    Source = https://github.com/ra-systems/django-slick-reporting
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Operating System :: POSIX :: BSD
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:

python_requires = >=3.6
install_requires =
    django>=2.2
    python-dateutil>=2.8.1
    pytz
    simplejson
    django-crispy-forms


