[metadata]
license_file = LICENSE.md
name = django-slick-reporting
version = attr: slick_reporting.__version__
author = Ra Systems
author_email = ramez@rasystems.io
description = A one-stop report and analytics generation and computation with batteries included
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://django-slick-reporting.com/
project_urls =
    Documentation = https://django-slick-reporting.readthedocs.io/en/latest/
    Source = https://github.com/ra-systems/django-slick-reporting
    Changelog = https://github.com/ra-systems/django-slick-reporting/blob/master/CHANGELOG.md
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0
    Framework :: Django :: 5.1
    Intended Audience :: Developers
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Operating System :: POSIX :: BSD
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:

python_requires = >=3.9
install_requires =
    django>=2.2
    python-dateutil>2.8.1
    pytz
    simplejson
    django-crispy-forms




